@@ -7,6 +7,8 @@ repositories {
 }
 
 dependencies {
+    implementation(libs.llvm.platform)
+
     testImplementation(libs.junit.jupiter)
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
@@ -19,8 +21,12 @@ java {
 
 application {
     mainClass = "io.github.stardragonstudios.sol.SolCompiler"
+
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
+
+    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
